# trabalho-faculdade

./: README.md  arquivo.txt
.github/workflows/: pipeline.yaml
beck/: .coverage  .dockerignore  .env  .gitignore  Dockerfile  compose.yaml  database.db  entrypoint.sh  fly.toml  pipeline.yaml  pyproject.toml
beck/.github/workflows/: pipeline.yaml
beck/api/: app.py  database.py  funcoes_auxiliaries.py  models.py  schema_admin.py  schema_alunos.py  schema_cursos.py  schema_matricula.py  schemas_usuarios.py  security.py  settings.py
beck/api/routers/: admin.py  alunos.py  cursos.py  login.py  matriculas.py  usuarios.py
beck/migrations/: env.py
beck/migrations/versions/: 0a37b7049c66_atualizando_tabelas_admin.py  2facf2586ca7_atualizando_tabelas_admin.py  9e1a548a87f5_criando_tabela_final.py  b22e26154a47_tabela_atualizada.py
beck/tests/: conftest.py  test_admin.py  test_alunos.py  test_cursos.py  test_login.py  test_matriculas.py  test_security.py  test_usuarios.py
front/: cadastro.html  contato.html  curso-detalhe.html  cursos.html  index.html  login.html  matricula.html  sobre.html
front/assets/: main.css  style.css
front/static/: api.js  main.js
front/templates/: admin.html  cadastro.html  contato.html  curso-detalhe.html  cursos.html  index.html  login.html  matricula.html  sobre.html
