[project]
name = "tecno-brasilia"
version = "0.1.0"
package-mode = false
description = ""
authors = [
    {name = "duartex_",email = "mayckonkennedy877@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "fastapi[standard] (>=0.136.3,<0.137.0)",
    "sqlalchemy[asyncio] (>=2.0.51,<3.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.17,<0.16.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "freezegun (>=1.5.5,<2.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)"
]


[tool.ruff]
line-length = 150
extend-exclude = ["migrations"]

[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL", "PT"]


[tool.ruff.format]
preview = true
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"
asyncio_default_fixture_loop_scoope = "function"
asyncio_loop_policy = "WindowsSelectorEventLoopPolicy"

[tool.coverage.run]
concurrency = ["thread", "greenlet"]

[tool.taskipy.tasks]
lint = "ruff check"
format = "ruff format"
run = "fastapi dev api/app.py"
test = "task format && pytest -s -x --cov=api -vv"
pre_format = "ruff check --fix"
pre_test = "task lint"
post_test = "coverage html"